[package]
name = "twenty-postgres-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = "0.7"
pgwire = "0.12"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"

[dev-dependencies]
tokio-test = "0.4"